syntax = "proto3";

package easyrent.auth;

service Authenticate {
  rpc OnLogin(AuthRequest) returns (LoginReply) {}
  rpc OnRegister(AuthRequest) returns (RegisterReply) {}
}

message AuthRequest {
  string name = 1;
  string password = 2;
}

enum AuthError {
  MISMATCHED_PASSWORD = 0;
  NONEXISTENT_USER = 1;
  DUPLICATED_NAME = 2;
  UNKNOWN = 3;
}

message LoginReply {
  bool success = 1;
  optional AuthError error = 2;
}

message RegisterReply {
  bool success = 1;
  optional AuthError error = 2;
}
